--- a/manuscript.qmd
+++ b/manuscript.qmd
@@ -33,9 +33,6 @@ study" -->
 
 # Abstract
 
-
-Hello
-
 <!-- Provide in the abstract an informative and balanced summary of
 what was done and what was found. Not more than 300 words. -->
 
@@ -55,7 +52,6 @@ investigation being reported. End by stating the aim or specific
 objectives, including any prespecified hypotheses. The introduction
 should not be longer than 1-1.5 pages, typically 4-5 paragraphs, each
 6-8 lines long. Support every statement with a citation -->
-
 
 
 # Methods
@@ -289,6 +285,9 @@ variable of interest
 (c) Cohort study — Summarise follow-up time (eg, average and total
 amount)
 -->
+```{r}
+Descriptive.table1
+```
 ## Outcome data
 
 <!--  
@@ -316,6 +315,13 @@ categorized
 absolute risk for a meaningful time period
 -->
 
+```{r}
+SR.Table1
+```
+
+```{r}
+MV.Table1
+```
 ## Other analyses 
 
 <!--  
